# currency_bot

./: .gitignore  database.db  main.py  pyproject.toml
src/: __init__.py  database.py  loader.py  parser.py
